[package]
name = "twittergram"
version = "0.1.0"
edition = "2021"

[dependencies]
egg-mode = { version = "0.16", features = ["rustls"], default-features = false }
grammers-client = { git = "https://github.com/Lonami/grammers", rev = "96f61a16b4c4ba5e33175fbaafae061dcbd4af25" }
grammers-session = { git = "https://github.com/Lonami/grammers", rev = "96f61a16b4c4ba5e33175fbaafae061dcbd4af25" }
log = "0.4.14"
mime_guess = "2.0.3"
serde_json = "1.0.85"
serde = "1.0.145"
simple_logger = { version = "2.3.0", default-features = false, features = ["timestamps"] }
tokio = { version = "1", features = ["full"] }
toml = "0.5"