[package]
name = "twittergram"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.58"
critter = { git = "https://github.com/gus4rs/critter" }
grammers-client = "0.4"
grammers-session = "0.4"
log = "0.4.14"
mime_guess = "2.0.3"
serde_json = "1.0.85"
serde = "1.0.145"
simple_logger = { version = "2.3.0", default-features = false, features = ["timestamps"] }
tokio = { version = "1.28.2", features = ["full"] }
toml = "0.5"